Improved documentation, changed header name to follow API standards
